Bug 167774 - Writer shows font of defined style with 10,8 pt instead of 9 pt
Summary: Writer shows font of defined style with 10,8 pt instead of 9 pt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-02 08:02 UTC by Robert Großkopf
Modified: 2025-08-28 16:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Testdocument - should show 167 pages and style for Basic code with 9 pt. (1.40 MB, application/vnd.oasis.opendocument.text)
2025-08-02 08:02 UTC, Robert Großkopf
Details
Shows document in LO 24.8.7.2 (323.51 KB, image/png)
2025-08-02 08:04 UTC, Robert Großkopf
Details
Shows buggy document in LO 25.2.4.3 (290.61 KB, image/png)
2025-08-02 08:05 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2025-08-02 08:02:01 UTC
Created attachment 202148 [details]
Testdocument - should show 167 pages and style for Basic code with 9 pt.

Open the attached screenshots. Will show the difference size of a font, defined in a specific style for code in German Base Handbuch. It is defined as 90% of a style, which has been set to 10 pt. 167 pages (with font size 9 pt) expand to 184 pages (with font size 10,8 pt). 

This buggy behavior appears in 
Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

and also LO 25.8.0.2.
Won't appear in LO 24.8.7.2 and all older versions.
Comment 1 Robert Großkopf 2025-08-02 08:04:19 UTC
Created attachment 202149 [details]
Shows document in LO 24.8.7.2
Comment 2 Robert Großkopf 2025-08-02 08:05:01 UTC
Created attachment 202150 [details]
Shows buggy document in LO 25.2.4.3
Comment 3 V Stuart Foote 2025-08-02 14:22:27 UTC
Confirmed. However, while editing it clears with an edit of the style 'LibOComputerCode kleineSchrift' change of the Paragraph style's Font -> Size from 90% to a different value, e.g. 85%, and then change it back to 90%. The document redisplays with noted page count.

Unfortunately, on saving the document to ODF, the 90% size for the "DejaVu Sans Mono" font assigned to the style again is recalculated at 10.8pt and the page layout shifts again. 

And if assigning a different font size percentage the layout gets recalculated at different point sizes. 85% --> 10.2pt


Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 28; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Saburo 2025-08-03 01:42:09 UTC
bibisected with linux-64-25.2
commit ca65ed8a37847b334868b8cbf05f1ba77665d5aa
author	Noel Grandin <noelgrandin@gmail.com>	Tue Dec 24 12:28:29 2024 +0200

move RES_FMT_CHG to SfxHint

SwUpdateAttr is re-using this constant for a similar purpose,
so rather give that its own constant to play with
RES_UPDATEATTR_FMT_CHG.

Change-Id: I5ffe2a861c44948d8c7dbdd6cf1435c913985c6c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179305
Comment 5 Takenori Yasuda 2025-08-03 04:43:56 UTC
Copying the entire content into a new document somehow resolves the issue.
Perhaps it's an issue with the attached file itself?


Tested with:
Version: 25.8.1.0.0+ (X86_64) / LibreOffice Community
Build ID: 051e3f7490541e1a67111b7f8cf72fa5d2a1bb96
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo

Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo

Version: 24.8.7.2 (x86) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
(This is a portable version.)
Comment 6 Robert Großkopf 2025-08-03 06:09:22 UTC
(In reply to Takenori Yasuda from comment #5)
> Copying the entire content into a new document somehow resolves the issue.
> Perhaps it's an issue with the attached file itself?

Have 12 chapters here for Base-Handbuch. All this documents have been created first for LO 3.5 - so a long time ago. Not every document uses this style, but 
→ there are other document using this style and showing the same behavior
(chapter 5,6,7,8,9,11)
→ there are document using this style and showing not the same behavior (chapter 2,3,4)

Chapter, which don't show the same behavior, will only contain some paragraphs with this style.

Have now created the Base Handbuch for LO 25.8 with LO 24.8.7.2 which won't show this behavior for every chapter.
Comment 7 Commit Notification 2025-08-21 15:59:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ba5977c8f92fb130851b87d405029ec7ea0be36

tdf#167774 Writer shows font of defined style with 10,8 pt instead of 9 pt

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-21 17:15:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/f4fd88e4e04ecdb8266ba6112dffc988a8157775

tdf#167774 Writer shows font of defined style with 10,8 pt instead of 9 pt

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-21 19:46:14 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3d411a417db35c40e990c2cab09f65198ec0371b

tdf#167774: sw_odfimport: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-21 20:03:23 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/7f7c21b2be2af5be47149cf1dbd81f45512b13a5

tdf#167774 Writer shows font of defined style with 10,8 pt instead of 9 pt

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-08-21 21:05:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/98bb4a9de003948e08339167f5d9e13d3351d571

tdf#167774: sw_odfimport: Add test

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-08-22 15:45:45 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/94861c3ff59b485d7b8f502507b8a487f86bab0e

tdf#167774: sw_odfimport: Add test

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-08-28 16:35:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-6":

https://git.libreoffice.org/core/commit/64709bc24e28591ebffca9d081be8547e41e6e8b

tdf#167774 Writer shows font of defined style with 10,8 pt instead of 9 pt

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.