tdf#167774 Writer shows font of defined style with 10,8 pt instead of 9 pt

regression from
    commit ca65ed8a37847b334868b8cbf05f1ba77665d5aa
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Tue Dec 24 12:28:29 2024 +0200
    move RES_FMT_CHG to SfxHint

The important fix is in SwModify::SwClientNotify.

The other changes are small things I picked up when going over the original patch, which
likely don't make much different, but better safe than sorry.

Change-Id: I65c79b60740dc7f1b711522db8d8682c69d632e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189998
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins